# versifier

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements_ci.txt
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
tests/: test_compiler.py  test_config.py  test_core.py  test_foo.py  test_main.py  test_poetry.py  test_stub.py  test_uv.py
versifier/: __main__.py  compiler.py  config.py  core.py  poetry.py  stub.py  uv.py
