[project]
name = "versifier"
version = "0.3.3"
description = "Versifier: A lyrical tool to transform Python requirements into Poetry configurations, effortlessly and elegantly."
authors = [{ name = "MrLYC", email = "fx@m.mrlyc.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.0.3",
    "pip-requirements-parser>=32.0.1",
    "toml>=0.10.2",
    "astunparse>=1.6.3",
    "cython>=3.0.11",
    "setuptools",
    "typing_extensions",
]

[project.urls]
Repository = "https://github.com/mrlyc/versifier"
Documentation = "https://mrlyc.github.io/versifier/"

[project.scripts]
versifier = "versifier.__main__:cli"

[dependency-groups]
dev = [
    "mypy>=0.971",
    "types-toml>=0.10.8.7",
    "pytest>=7.0.1",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.versifier]
private_packages = ["click", "pyparsing", "ycyc"]
poetry_extras = []
projects_dirs = []

[tool.mypy]
files = ["versifier"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.format]
preview = true


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
